--- a/when-where.html
+++ b/when-where.html
@@ -4,14 +4,14 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+	
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Niraj weds Ruchi</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Wedding of Niraj & Ruchi" />
+	<meta name="keywords" content="Ruchi, Niraj, niraj.nijju, ISM, Noida, Dhanbad, Muzaffarpur" />
 
 
 
@@ -53,6 +53,9 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+
+
+
 	</head>
 	<body>
 		<div id="fh5co-wrapper">
@@ -66,7 +69,7 @@
 						<div class="container">
 							<div class="col-md-10 col-md-offset-1">
 								<div class="animate-box">
-									<h1>Nuptial</h1>
+									<h1>Niraj weds Ruchi</h1>
 									<h2>When &amp; Where</h2>
 								</div>
 							</div>
@@ -84,18 +87,16 @@
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li><a href="index.html" >Home</a></li>
+							<li class="active"><a href="index.html" >Home</a></li>
 							<li>
 								<a href="groom-bride.html" class="fh5co-sub-ddown">Groom &amp; Bride</a>
 								<ul class="fh5co-sub-menu">
-									<li><a href="#">Dropdown Menu 1</a></li>
-									<li><a href="#">Dropdown Menu 2</a></li>
-									<li><a href="#">Dropdown Menu 3</a></li>
-									<li><a href="#">Dropdown Menu 4</a></li>
+									<li><a href="groom-bride.html#niraj">Niraj : The Groom</a></li>
+									<li><a href="groom-bride.html#ruchi">Ruchi : The Bride</a></li>
 								</ul>
 							</li>
-							<li class="active"><a href="when-where.html">When &amp; Where</a></li>
-							<li><a href="guest.html">Guest</a></li>
+							<li><a href="when-where.html">When &amp; Where</a></li>
+							<!-- <li><a href="guest.html">Guest</a></li> -->
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blog.html">Blog</a></li>
 						</ul>
@@ -119,9 +120,10 @@
 						<div class="wedding-events">
 							<div class="ceremony-bg" style="background-image: url(images/wed-ceremony.jpg);"></div>
 							<div class="desc">
-								<h3>Wedding Ceremony</h3>
-								<p><strong>Saturday, December 28, 2017, 4.00 PM - 5.00PM @ Boracay Beach</strong></p>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<h3>Sangeet &amp; Mehndi</h3>
+								<p><strong>Sunday, January 21, 2018, 06:30 PM - 09:00PM</strong></p>
+								<p>Please join us for Geet & Sangeet a celebration of music, dance and dinner to express our joy and good wishes for soon to be married Niraj and Ruchi<br />
+								@ Hotel Chandralok, Muzaffarpur</p>
 							</div>
 						</div>
 					</div>
@@ -129,30 +131,47 @@
 						<div class="wedding-events">
 							<div class="ceremony-bg" style="background-image: url(images/wed-party.jpg);"></div>
 							<div class="desc">
-								<h3>Wedding Party</h3>
-								<p><strong>Saturday, December 28, 2017, 6.00 PM - 11.00PM @ Boracay Beach</strong></p>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<h3>Wedding Ceremony</h3>
+								<p><strong>Monday, January 22, 2018, 07:30pm - 11:00PM</strong></p>
+								<p>
+
+
+									As the saying goes "marriages are made in heaven" 
+									which we solemnize on earth. On Saturday, the 22nd of January 2018. We wish to celebrate the marriage of our son Niraj to Ruchi <br />
+									The honor of your presence is requested at the auspicious Ceremony of <br /><br />
+									<b>Niraj, son of Hare Khishna &amp; Poonam Devi</b><br />
+									&amp; <br />
+									<b>Ruchi, daughter of Lt. Om Prakash &amp; Rekha Devi</b><br /><br />
+									Please join us on this memorable occasion to shower your blessings on the newly wed couple <br />
+									@ Aamgola, Muzaffarpur, Bihar
+
+
+
+								</p>
 							</div>
 						</div>
 					</div>
 				</div>
+<!-- 
 				<div class="row">
 					<div class="col-md-12">
 						<div id="map" class="fh5co-map"></div>
 					</div>
 				</div>
+ -->
 			</div>
 		</div>
 
-		<div id="fh5co-started" style="background-image:url(images/cover_bg_2.jpg);"data-stellar-background-ratio="0.5">
+		<div id="fh5co-started" style="background-image:url(images/cover_bg_2.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 			<div class="container">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h2>Are You Attending?</h2>
-						<p>Please Fill-up the form to notify you that you're attending. Thanks.
+						<h2>Send your best wishes</h2>
+						<p>Fullfill us with you blessing and wishes. Thanks.
 					</div>
 				</div>
+				<!-- 
 				<div class="row animate-box">
 					<div class="col-md-10 col-md-offset-1">
 						<form class="form-inline">
@@ -174,9 +193,22 @@
 						</form>
 					</div>
 				</div>
+ -->
+
+ 			<div class="nijju-fb">
+ 				<div class="fb-comments" data-href="http://nijju.in/" data-numposts="3"></div>
+
+
+ 				<!-- 
+ 				<div class="fb-comment-embed" data-href="https://www.facebook.com/ruchi.sinha.7965/posts/1618060448255259" data-width="560" data-include-parent="true"></div>
+ 				 -->
+ 				
+ 			</div>
+
+
+
 			</div>
 		</div>
-		
 		
 		<footer>
 			<div id="footer">
@@ -192,9 +224,12 @@
 								<a href="#"><i class="icon-instagram"></i></a>
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								 -->
-								<a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a>
+								
+<iframe width="640" height="360" src="https://www.youtube.com/embed/HlsCsLeqf1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+								<!-- <a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a> -->
 							</p>
-							<p>Niraj.nijju. Noida</p>
+							<p>niraj &amp; Ruchi noida</p>
 						</div>
 					</div>
 				</div>
@@ -210,9 +245,22 @@
 	<!-- END fh5co-wrapper -->
 
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script> -->
 	<!-- jQuery -->
 	<script src="dist/scripts.min.js"></script>
+
+	<!-- fb:start -->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=572167239794152';
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+	
+	<!-- fb:end -->
+	
 	</body>
 </html>
 
