--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Niraj weds Ruchi</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Wedding of Niraj & Ruchi" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="Ruchi, Niraj, niraj.nijju, ISM, Noida, Dhanbad, Muzaffarpur" />
 
 
 
@@ -102,14 +102,12 @@
 							<li>
 								<a href="groom-bride.html" class="fh5co-sub-ddown">Groom &amp; Bride</a>
 								<ul class="fh5co-sub-menu">
-									<li><a href="#">Dropdown Menu 1</a></li>
-									<li><a href="#">Dropdown Menu 2</a></li>
-									<li><a href="#">Dropdown Menu 3</a></li>
-									<li><a href="#">Dropdown Menu 4</a></li>
+									<li><a href="groom-bride.html#niraj">Niraj : The Groom</a></li>
+									<li><a href="groom-bride.html#ruchi">Ruchi : The Bride</a></li>
 								</ul>
 							</li>
 							<li><a href="when-where.html">When &amp; Where</a></li>
-							<li><a href="guest.html">Guest</a></li>
+							<!-- <li><a href="guest.html">Guest</a></li> -->
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blog.html">Blog</a></li>
 						</ul>
@@ -124,15 +122,19 @@
 			<div class="container">
 				<div class="row row-bottom-padded-md animate-box">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
-							<img src="images/groom.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-							<h3>Niraj</h3>
-						</div>
+						<a href="groom-bride.html#niraj">	
+							<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
+								<img src="images/groom.jpg" class="img-responsive" alt="Niraj">
+								<h3>Niraj</h3>
+							</div>
+						</a>
 						<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><i class="icon-heart"></i></h2></div>
-						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
-							<img src="images/bride.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-							<h3>Ruchi</h3>
-						</div>
+						<a href="groom-bride.html#ruchi">
+							<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
+								<img src="images/bride.jpg" class="img-responsive" alt="Ruchi">
+								<h3>Ruchi</h3>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="row animate-box">
@@ -192,11 +194,11 @@
  -->
 
  			<div class="nijju-fb">
- 				<div class="fb-comments" data-href="http://nijju.in/" data-numposts="3"></div>
+ 				<div class="fb-comments" data-href="http://nijju.in/" data-numposts="3" margin=auto></div>
 
-
+ 				<!-- 
  				<div class="fb-comment-embed" data-href="https://www.facebook.com/ruchi.sinha.7965/posts/1618060448255259" data-width="560" data-include-parent="true"></div>
-
+ 				 -->
  				
  			</div>
 
@@ -219,9 +221,12 @@
 								<a href="#"><i class="icon-instagram"></i></a>
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								 -->
-								<a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a>
+								
+<iframe width="640" height="360" src="https://www.youtube.com/embed/HlsCsLeqf1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+								<!-- <a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a> -->
 							</p>
-							<p>niraj.nijju. noida</p>
+							<p>niraj &amp; Ruchi noida</p>
 						</div>
 					</div>
 				</div>
