about Ruchi bhabhi

--- a/groom-bride.html
+++ b/groom-bride.html
@@ -147,9 +147,8 @@
 								<div class="couple-desc">
 									<h3>Ruchi Kumari</h3>
 									<p>
-Ruchi, The Princess I meet on earth who is directly put by heaven. I have seen her in some shades of life and never been this Fortunate in life to get a life partner like her
-Her ability to pour abundance smile and happiness to everybody is wonder blessings, she have from heaven of all gods. Her charm makes everyone love her. She was adorable for me when I meet her, I was not sure our relationship would go further but now she is gem for me in my life whom I never want to loose.</p>
-<p>She is joyful, energetic, adorable, nice magnificent, smart girl who is having a clear idea about life.</p>
+Ruchi, a princess I meet on the Earth who is directly put by heaven. I have seen her in some shades of life and never been this Fortunate in life to get a life partner like her. Her ability to pour abundance smile and happiness to everybody is wonder blessings she has got from heaven of all the gods. Her charm makes everybody love her. She was adorable for me when I first met her, I was not sure that our relationship would go further but now she is a priceless gem of my life whom I never want to lose.</p>
+<p>She is a joyful, energetic, adorable, nice magnificent, and smart girl who has a clear idea about life.</p>
 <p>I would like to make this princess my queen&#9819; of heart&#9825;.</p>
 									<p class="fh5co-social-icons">									<a href="https://www.facebook.com/ruchi.sinha.7965"><i class="icon-facebook2"></i></a>
 									</p>
@@ -260,7 +259,7 @@ Her ability to pour abundance smile and happiness to everybody is wonder blessin
 	}(document, 'script', 'facebook-jssdk'));</script>
 	
 	<!-- fb:end -->
-	
+
 	</body>
 </html>
 
