--- a/blog.html
+++ b/blog.html
@@ -95,7 +95,7 @@
 									<li><a href="groom-bride.html#ruchi">Ruchi : The Bride</a></li>
 								</ul>
 							</li>
-							<li><a href="when-where.html">When &amp; Where</a></li>
+							<li><a href="time-venue.html">Time &amp; Venue</a></li>
 							<!-- <li><a href="guest.html">Guest</a></li> -->
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blog.html">Blog</a></li>
@@ -119,17 +119,15 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/blog_sheyas.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/blog_supriya.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3>Ruchi, my project partner</h3>
-									<span class="by">by Shreyas Mulgund</span>
+									<h3>Didi wali friend</h3>
+									<span class="by">by Supriya</span>
 									<!-- <span class="posted_date">Apr. 15th</span> -->
 									<!-- <span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
 									<!-- <span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
-									<p>Ruchi the angle I met on earth who is directly put up by heaven I have seen her in some shades of life and never been this fortunate in life to get a friend like you 
-You are adorable for me when u met me I was not sure our friendship would go further or not because I don't make friends easily you were and you are  a gem for me in my life whom I never want to loose you are strong and independent girl and very few pop has this quality and you are the one and most important thing is you are joyful , energetic, adorable beautiful ,comely cute dazzling nice magnificent smart girl who is having a clear idea about life and I never saw you in a state of confused</p>
-<p>If I can describe what is ruchi in words English has less words to describe you and your attitude</p>
+									<p>Hello di. Dont know where to start about you both because words are not just enough to describe you and your relationship.</p><p> Di you are just an amazing person. You can make everyone fell in love with you by your charm. I dont have any elder sibling which always made me feel sad but after meeting you this sad feeling turned into happiness. You have always treated me like  your small sis. I just love you di. And m really happy for you that you are going to marry your prince charming, our Niraj jija ji. After getting into your cindrella life dont forget this stupid sister. Gonna miss you a lot di. I LOVE YOU DI </p>
 									<!-- <p><a href="#">Learn More...</a></p> -->
 								</div>
 							</div> 
@@ -140,12 +138,14 @@ You are adorable for me when u met me I was not sure our friendship would go fur
 							<a href="#"><img class="img-responsive" src="images/blog_ritu.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3>My Di &amp; Jiju</h3>
-									<span class="by">by Ritu(babu)</span>
+									<h3>My Jiju</h3>
+									<span class="by">by Ritu (babu)</span>
 									<!-- <span class="posted_date">Apr. 15th</span> -->
 									<!-- <span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
 									<!-- <span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
-									<p>cooming soon, still writting ...</p>
+									<p>
+Niraj Jiju, he is absolutely charming and a handsome person. His perspective is refreshing as he lights up the room. He has a great sense of humour. He is a best advisor, he always knows what to say. He can fix anything. Judging by the way he is so sweet and playful with kids, he would be a great dad one day. Ruchi Di is so lucky to have him in her life.
+									</p>
 									<!-- <p><a href="#">Learn More...</a></p> -->
 								</div>
 							</div> 
@@ -154,15 +154,20 @@ You are adorable for me when u met me I was not sure our friendship would go fur
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/blog_ruchidi.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href="#">Party Night</a></h3>
-									<span class="by">by Admin</span>
-									<span class="posted_date">Apr. 20th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
+									<h3>'Ruch<i>iraj</i>' my lifelines and secret keepers</h3>
+									<span class="by">by Ritu(babu)</span>
+									<!-- <span class="posted_date">Apr. 15th</span> -->
+									<!-- <span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
+									<!-- <span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
+									<p>
+Ruchi Di, she is my go to person for everything. Her love is unimaginable. She is my best secret keeper. Her wardrobe is my wardrobe. She has seen the craziest part of my life but still loves me.  Nothing can replace the beautiful bond that we have shared.</p>
+
+<p>Now my baby sister is all big now. May you always be bestowed with all the happiness and success in your life. May this new journey of yours bring all the maturity, optimism and stability to you. I wish these coming years of your life make you a strong woman and may you shine bright and reach the zenith of success. Make everyone proud and start a new married life. Bless you. You mean the world to me. Love you to the moon and back!!!!
+									</p>
+									<!-- <p><a href="#">Learn More...</a></p> -->
 								</div>
 							</div> 
 						</div>
@@ -193,10 +198,10 @@ You are adorable for me when u met me I was not sure our friendship would go fur
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href="#">Preparation of Wedding</a></h3>
-									<span class="by">by Admin</span>
+									<!-- <span class="by">by Admin</span>
 									<span class="posted_date">Apr. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
+									<p>cooking up..</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div> 
@@ -208,11 +213,11 @@ You are adorable for me when u met me I was not sure our friendship would go fur
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href="#">Party Night</a></h3>
-									<span class="by">by Admin</span>
+									<!-- <span class="by">by Admin</span>
 									<span class="posted_date">Apr. 20th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span> -->
+									<p>still cooking up something intresting..</p>
+									<!-- <p><a href="#">Learn More...</a></p> -->
 								</div>
 							</div> 
 						</div>
@@ -294,7 +299,7 @@ You are adorable for me when u met me I was not sure our friendship would go fur
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								 -->
 								
-<iframe width="640" height="360" src="https://www.youtube.com/embed/HlsCsLeqf1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rle3EjU3pAA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 								<!-- <a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a> -->
 							</p>
@@ -330,7 +335,7 @@ You are adorable for me when u met me I was not sure our friendship would go fur
 	
 	<!-- fb:end -->
 
-	
+
 	</body>
 </html>
 
