--- a/guest.html
+++ b/guest.html
@@ -95,7 +95,7 @@
 									<li><a href="groom-bride.html#ruchi">Ruchi : The Bride</a></li>
 								</ul>
 							</li>
-							<li><a href="when-where.html">When &amp; Where</a></li>
+							<li><a href="time-venue.html">Time &amp; Venue</a></li>
 							<!-- <li><a href="guest.html">Guest</a></li> -->
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blog.html">Blog</a></li>
@@ -239,7 +239,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								 -->
 								
-<iframe width="640" height="360" src="https://www.youtube.com/embed/HlsCsLeqf1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rle3EjU3pAA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 								<!-- <a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a> -->
 							</p>
