--- a/index.html
+++ b/index.html
@@ -60,13 +60,6 @@
 
 	<body>
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=572167239794152';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
 		<div id="fh5co-wrapper">
 		<div id="fh5co-page">
@@ -106,7 +99,7 @@
 									<li><a href="groom-bride.html#ruchi">Ruchi : The Bride</a></li>
 								</ul>
 							</li>
-							<li><a href="when-where.html">When &amp; Where</a></li>
+							<li><a href="time-venue.html">Time &amp; Venue</a></li>
 							<!-- <li><a href="guest.html">Guest</a></li> -->
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blog.html">Blog</a></li>
@@ -222,7 +215,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								 -->
 								
-<iframe width="640" height="360" src="https://www.youtube.com/embed/HlsCsLeqf1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rle3EjU3pAA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 								<!-- <a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a> -->
 							</p>
