--- a/time-venue.html
+++ b/time-venue.html
@@ -70,7 +70,7 @@
 							<div class="col-md-10 col-md-offset-1">
 								<div class="animate-box">
 									<h1>Niraj weds Ruchi</h1>
-									<h2>When &amp; Where</h2>
+									<h2>Time &amp; Venue</h2>
 								</div>
 							</div>
 						</div>
@@ -95,7 +95,7 @@
 									<li><a href="groom-bride.html#ruchi">Ruchi : The Bride</a></li>
 								</ul>
 							</li>
-							<li><a href="when-where.html">When &amp; Where</a></li>
+							<li><a href="time-venue.html">Time &amp; Venue</a></li>
 							<!-- <li><a href="guest.html">Guest</a></li> -->
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blog.html">Blog</a></li>
@@ -112,7 +112,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h2>When &amp; Where</h2>
+						<h2>Time &amp; Venue</h2>
 					</div>
 				</div>
 				<div class="row row-bottom-padded-md">
@@ -122,8 +122,8 @@
 							<div class="desc">
 								<h3>Sangeet &amp; Mehndi</h3>
 								<p><strong>Sunday, January 21, 2018, 06:30 PM - 09:00PM</strong></p>
-								<p>Please join us for Geet & Sangeet a celebration of music, dance and dinner to express our joy and good wishes for soon to be married Niraj and Ruchi<br />
-								@ Hotel Chandralok, Muzaffarpur</p>
+								<p>Please join us for Geet & Sangeet a celebration of music, dance and dinner to express our joy and good wishes for soon to be married Niraj and Ruchi.<br />
+								@ Hotel Chandralok Continental, Muzaffarpur</p>
 							</div>
 						</div>
 					</div>
@@ -132,21 +132,16 @@
 							<div class="ceremony-bg" style="background-image: url(images/wed-party.jpg);"></div>
 							<div class="desc">
 								<h3>Wedding Ceremony</h3>
-								<p><strong>Monday, January 22, 2018, 07:30pm - 11:00PM</strong></p>
+								<p><strong>Monday, January 22, 2018, 07:00pm - 11:00PM</strong></p>
 								<p>
-
-
-									As the saying goes "marriages are made in heaven" 
-									which we solemnize on earth. On Saturday, the 22nd of January 2018. We wish to celebrate the marriage of our son Niraj to Ruchi <br />
+									As the saying goes <i>"marriages are made in heaven"</i> 
+									which we solemnize on earth. On Monday, the 22nd of January 2018. We wish to celebrate the marriage of our son Niraj to Ruchi <br />
 									The honor of your presence is requested at the auspicious Ceremony of <br /><br />
 									<b>Niraj, son of Hare Khishna &amp; Poonam Devi</b><br />
 									&amp; <br />
 									<b>Ruchi, daughter of Lt. Om Prakash &amp; Rekha Devi</b><br /><br />
 									Please join us on this memorable occasion to shower your blessings on the newly wed couple <br />
-									@ Aamgola, Muzaffarpur, Bihar
-
-
-
+									@ Amgola, Muzaffarpur, Bihar
 								</p>
 							</div>
 						</div>
@@ -225,7 +220,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								 -->
 								
-<iframe width="640" height="360" src="https://www.youtube.com/embed/HlsCsLeqf1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rle3EjU3pAA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 								<!-- <a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a> -->
 							</p>
