--- a/groom-bride.html
+++ b/groom-bride.html
@@ -95,7 +95,7 @@
 									<li><a href="groom-bride.html#ruchi">Ruchi : The Bride</a></li>
 								</ul>
 							</li>
-							<li><a href="when-where.html">When &amp; Where</a></li>
+							<li><a href="time-venue.html">Time &amp; Venue</a></li>
 							<!-- <li><a href="guest.html">Guest</a></li> -->
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blog.html">Blog</a></li>
@@ -126,7 +126,12 @@
 							<div class="col-md-6 nopadding animate-box">
 								<div class="couple-desc">
 									<h3>Niraj Kumar</h3>
-									<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius. Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+									<p>
+Niraj, The gift of God, I believe that God has sent him into my life to give me something to fight for, to show me there is love in this world, to provide me with the hope and to bring me joy. He is a man with high dignity and moral values, Innovative and always tends to precisely new ideas. I love the way he listens and respects others. He has such a tremendous positive charisma.</p>
+<p>He has the courage of his convictions I have found the perfect partner to spend my life with.</p>
+<p>Loving him has given me a new meaning to my life, and it's impossible now to think of my life/dream about a life without him. I love him more than anything else in this world and never want to lose him.
+</p>
+<p align="right"><i> in words of Ruchi</i></p>
 									<p class="fh5co-social-icons">
 										<a href="facebook.com/niraj.nijju"><i class="icon-facebook2"></i></a>
 									</p>
@@ -150,6 +155,7 @@
 Ruchi, a princess I meet on the Earth who is directly put by heaven. I have seen her in some shades of life and never been this Fortunate in life to get a life partner like her. Her ability to pour abundance smile and happiness to everybody is wonder blessings she has got from heaven of all the gods. Her charm makes everybody love her. She was adorable for me when I first met her, I was not sure that our relationship would go further but now she is a priceless gem of my life whom I never want to lose.</p>
 <p>She is a joyful, energetic, adorable, nice magnificent, and smart girl who has a clear idea about life.</p>
 <p>I would like to make this princess my queen&#9819; of heart&#9825;.</p>
+<p><i> :niraj</i></p>
 									<p class="fh5co-social-icons">									<a href="https://www.facebook.com/ruchi.sinha.7965"><i class="icon-facebook2"></i></a>
 									</p>
 								</div>
@@ -224,7 +230,7 @@ Ruchi, a princess I meet on the Earth who is directly put by heaven. I have seen
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								 -->
 								
-<iframe width="640" height="360" src="https://www.youtube.com/embed/HlsCsLeqf1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rle3EjU3pAA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 								<!-- <a href="https://www.youtube.com/watch?v=HlsCsLeqf1I"><i class="icon-youtube"></i></a> -->
 							</p>
