--- a/ruchiwedsniraj/guest.html
+++ b/ruchiwedsniraj/guest.html
@@ -210,7 +210,7 @@
  -->
 
  			<div class="nijju-fb">
- 				<div class="fb-comments" data-href="http://nijju.in/" data-numposts="3"></div>
+ 				<div class="fb-comments" data-href="http://nirajwedsruchi.nijju.in/" data-numposts="3"></div>
 
 
  				<!-- 
@@ -265,13 +265,13 @@
 
 	<!-- fb:start -->
 	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=572167239794152';
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=572167239794152';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 	
 	<!-- fb:end -->
 	
