--- a/ruchiwedsniraj/index.html
+++ b/ruchiwedsniraj/index.html
@@ -10,7 +10,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ruchi weds Niraj</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Wedding of Niraj & Ruchi" />
+	<meta name="description" content="Marriage invitation of Ruchi ♡ Niraj" />
+	<meta property="og:image" content="images/thumb.jpg">
 	<meta name="keywords" content="Wedding, Ruchi, Niraj, niraj.nijju, ISM, Noida, Dhanbad, Muzaffarpur" />
 
 
@@ -240,13 +241,13 @@
 
 	<!-- fb:start -->
 	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=572167239794152';
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=572167239794152';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 	
 	<!-- fb:end -->
 
